service.yaml
apiVersion: v1
kind: Service
metadata:
  name: object_storage_service
spec:
  selector:
    app: object_storage_api
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
