service.yml
apiVersion: v1
kind: Service
metadata:
  name: object_storage-service
spec:
  selector:
    app: object_storage_api
  ports:
    - port: 8085
      targetPort: 8085
