route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: object-storage-route
spec:
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: 8085
  tls:
    termination: edge
